--- a/templates/gemba/lines2.html
+++ b/templates/gemba/lines2.html
@@ -8,7 +8,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for object in lines_qs %}
+        {% for object in lines2_qs %}
             <tr>
                 <td><a href="{% url 'gemba_app:downtime-rate-report' line_id=object.pk %}">{{ object.name }}</a></td>
             </tr>
