Scrap and downtime report

--- a/templates/gemba/downtime_rate.html
+++ b/templates/gemba/downtime_rate.html
@@ -44,25 +44,25 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
         </tr>
         <tr style="central_pos; font-size:0.7vw;">
             <th scope="col" style="text-align:left;">Downtime</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
-            <th scope="col">Qty</th>
+            <th scope="col">Min</th>
             <th scope="col">%</th>
         </tr>
         </thead>
