--- a/templates/gemba/downtimes_search.html
+++ b/templates/gemba/downtimes_search.html
@@ -5,7 +5,7 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Last Entry</th>
+            <th scope="col">Created</th>
             <th scope="col">Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
