--- a/templates/gemba/scraps_search.html
+++ b/templates/gemba/scraps_search.html
@@ -5,7 +5,7 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Last Entry</th>
+            <th scope="col">Created</th>
             <th scope="col">Line</th>
             <th scope="col">Scrap Reason</th>
             <th scope="col">Qty</th>
