Tool App changes

--- a/templates/tools/index.html
+++ b/templates/tools/index.html
@@ -3,5 +3,6 @@
         <p><a href="{% url 'tools_app:tool-actions' %}">Tool change Actions</a></p>
         <p><a href="{% url 'tools_app:in-use' %}">Tools in use</a></p>
         <p><a href="{% url 'tools_app:machines' %}">Tools vs Jobs</a></p>
+        <p><a href="{% url 'tools_app:machines-3' %}">Tools vs Jobs Table</a></p>
         <p><a href="{% url 'tools_app:tools-machines' %}">Tools used on the machine</a></p>
 {% endblock %}
