--- a/templates/tools/tools.html
+++ b/templates/tools/tools.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+{% if request.user.is_staff %}
+    <div><a href="{% url 'tools_app:add-tool' machine_id=machine_id %}">
+    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Add tool
+    </button></a>
+    </div>
+    <br/>
+    {% endif %}
 <h4>Tools assigned for {{ machine_name }}:</h4>
 {% regroup qs by station as station_list %}
 {% for station in station_list %}
