--- a/templates/gemba/downtimes_view.html
+++ b/templates/gemba/downtimes_view.html
@@ -11,7 +11,6 @@
             <th scope="col">Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
-            <th scope="col">Frequency</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
             <th scope="col">Pareto Date</th>
@@ -20,11 +19,10 @@
         <tbody>
         {% for object in page_obj %}
             <tr>
-                <td>{{ object.modified|date:'d-m-Y H:i'}}</td>
+                <td>{{ object.created|date:'d-m-Y H:i'}}</td>
                 <td>{{ object.line }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{{ object.minutes }}</td>
-                <td>{{ object.frequency }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
                 <td>{{ object.pareto_date }}</td>
