--- a/templates/gemba/scraps_view.html
+++ b/templates/gemba/scraps_view.html
@@ -19,7 +19,7 @@
         <tbody>
         {% for object in page_obj %}
             <tr>
-                <td>{{ object.modified|date:'d-m-Y H:i'}}</td>
+                <td>{{ object.created|date:'d-m-Y H:i'}}</td>
                 <td>{{ object.line }}</td>
                 <td>{{ object.scrap }}</td>
                 <td>{{ object.qty }}</td>
