Gemba App extra report

--- a/templates/gemba/lines3.html
+++ b/templates/gemba/lines3.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+
+
 <h4>Select line:</h4>
 <table class="table table-hover">
         <thead>
@@ -10,7 +12,7 @@
         <tbody>
         {% for object in lines_qs %}
             <tr>
-                <td><a href="{% url 'gemba_app:scrap-downtime-compare' line_id=object.pk %}">{{ object.name }}</a></td>
+                <td><a href="{% url 'gemba_app:dates-choice' line_id=object.pk %}">{{ object.name }}</a></td>
             </tr>
         {% endfor %}
         </tbody>
