--- a/templates/gemba/pareto_before_close.html
+++ b/templates/gemba/pareto_before_close.html
@@ -16,7 +16,7 @@
 <p> Total Downtime: {{ downtime }} min </p>
 <h5 style="color: red;">{% if scrap_compare != 0 %}There is a mistake in your Pareto: Output: {{ output }} -
     Good: {{ good }} = {{ scrap }}?! Should be {{ scrap|add:scrap_compare }}. Go back to Pareto sheet and fix it. {% endif %}</h5>
-<h5>{% if performance > 100 %} There is a mistake in your Pareto: {{ performance }} > 100%.
+<h5>{% if performance > 100 %} Possibly, there is a mistake in your Pareto: {{ performance }} > 100%.
     Please go back to Pareto sheet and fix it.{% endif %}</h5>
 <h5>{% if performance < 80 %} Possibly, there is a mistake in your Pareto: Your Performance ({{ performance }}%)
     is too low. Please go back to Pareto sheet and check it.{% endif %}</h5>
