--- a/templates/gemba/index.html
+++ b/templates/gemba/index.html
@@ -6,7 +6,7 @@
         <p><a href="{% url 'gemba_app:lines-2' %}">Downtime Rate by Week</a></p>
         <p><a href="{% url 'gemba_app:scraps-view' %}">Scrap View</a></p>
         <p><a href="{% url 'gemba_app:lines' %}">Scrap Rate by Week</a></p>
-        <p><a href="{% url 'gemba_app:lines-3' %}">Downtime Scrap Compare</a></p>
+        <p><a href="{% url 'gemba_app:report-choices' %}">Downtime Scrap Compare</a></p>
         <p><a href="{% url 'gemba_app:quarantine-view' %}">Quarantine View</a></p>
         <p><a href="{% url 'gemba_app:chart' %}">Chart sample</a></p>
 {% endblock %}
