--- a/templates/gemba/report_choices.html
+++ b/templates/gemba/report_choices.html
@@ -1,8 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h5>Select a date range:</h5>
+<h4>Select a line:</h4>
+</br>
  <form action="{% url 'gemba_app:scrap-downtime-compare' %}" method="get">
+        {% for o in lines_qs %}
+        <tr>
+            <td>{{o.name}}</td>
+            <td><input type="radio" name="Samples" value="{{o.name}}"></td>
+        </tr>
+        {% endfor %}
+     </br>
+      </br>
+     <h5>Select a date range:</h5>
+     </br>
     From <input name="from" type="date"> to
      <input name="to" type="date">
      <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Search
