Gemba App changes

--- a/templates/gemba/downtimes_search.html
+++ b/templates/gemba/downtimes_search.html
@@ -9,6 +9,7 @@
             <th scope="col">Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
+            <th scope="col">Job from</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
             <th scope="col">Pareto Date</th>
@@ -21,6 +22,7 @@
                 <td>{{ object.line }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{{ object.minutes }}</td>
+                <td>{% if object.from_job is None %} {% else %} {{ object.from_job }} {% endif %}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
                 <td>{{ object.pareto_date }}</td>
