--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
+{% if user.is_authenticated %}
+        <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+        {% if user.is_staff %}
         <p><a href="{% url 'gemba_app:index' %}">Gemba app</a></p>
         <p><a href="{% url 'tools_app:index' %}">Tool app</a></p>
         <a href="{% url 'homepage' %}"></a>
+        {% else %}
+        <p>Please email to: elzbieta.gleske-jarosz@salts.co.uk to verify your account. Do it via company email.</p>
+        {% endif %}
+{% else %}
+<p>Welcome. Please log in.</p>
+{% endif %}
 {% endblock %}
