Gemba App report

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <title>Text-Editor/IDE Charts</title>
+    <title>Tool Life & Gemba App</title>
   </head>
 
   <body>
