Gemba App changes

--- a/templates/gemba/scrap_downtime_compare_mobile.html
+++ b/templates/gemba/scrap_downtime_compare_mobile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Downtime & Scrap Compare View for {{ line_name }}</h4>
+<h4>Downtime & Scrap Compare View for {{ line_name }}, {{ date }}</h4>
 <table class="table table-hover">
         <thead>
         <tr>
