--- a/templates/gemba/error_pareto.html
+++ b/templates/gemba/error_pareto.html
@@ -3,5 +3,5 @@
 <h4>Alert:</h4>
 
 </br>
-Your account is not assigned to any line. Please contact with admin to set up it.
+Your account is not assigned to any line. Please contact with admin to set it up.
 {% endblock %}
