--- a/templates/gemba/scrap_downtime_compare.html
+++ b/templates/gemba/scrap_downtime_compare.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Downtime & Scrap Compare View for {{ line_name }}</h4>
+<h4>Downtime & Scrap Compare View for {{ line_name }}, {{ date }}</h4>
 <table class="table table-hover">
         <thead>
         <tr>
@@ -16,7 +16,7 @@
         <tbody>
         {% for object in report %}
             <tr>
-                <td>{{ object.created|date:'d-m-Y H:i' }}</td>
+                <td>{{ object.created|date:'H:i' }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{% if object.min == 0 %} {% else %}{{ object.minutes }} {% endif %}</td>
